--- a/styles/css/riccio.css
+++ b/styles/css/riccio.css
@@ -1,8 +1,44 @@
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
 .riccio::before {
   display: none;
 }
 
-.riccio__row::after {
+.riccio__row-item::after, .riccio__row-pop::after {
   content: "";
   display: table;
   clear: both;
@@ -18,4 +54,6 @@
 
 .riccio__pop--active {
   display: block;
+  -webkit-animation: fadeIn .5s ease forwards;
+          animation: fadeIn .5s ease forwards;
 }
