--- a/test/styles/scss/style.scss
+++ b/test/styles/scss/style.scss
@@ -1,20 +1,7 @@
-@import 'breakpoint';
+@import "mixins";
 
 // Custom font.
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,700,700italic);
-
-
-// Variables
-// -----------------------------------------------------------------------------
-
-// Breakpoints
-$mobile: max-width 560px;
-$tablet: 561px 850px;
-$desktop: 851px;
-
-// Colors
-$text: #333;
-$rowpop: #f5f5f5;
 
 
 // Base
